<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageStart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/ai__2_"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name_start"
        android:textColor="#FFFF00"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:fontFamily="@font/bangers"
        android:text="@string/author_start"
        android:textAlignment="center"
        android:textColor="#B3000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/start_btn"
        android:textAllCaps="true"
        android:textColor="#FFFF00"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageStart"
        app:layout_constraintVertical_bias="0.25" />
</android.support.constraint.ConstraintLayout>