<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@android:style/Widget.TextView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#4DFFFFFF"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFF00"
        android:textSize="50sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <Button
        android:id="@+id/btnYes"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:background="@android:drawable/btn_default_small"
        android:backgroundTint="#00FF00"
        android:fontFamily="sans-serif"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHint"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="#FF0000"
        android:fontFamily="sans-serif"
        android:text="@string/no"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHint"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/btnHint"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:backgroundTint="#0000FF"
        android:fontFamily="sans-serif"
        android:text="@string/hint"
        android:textColor="#FFFF00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.3" />

</android.support.constraint.ConstraintLayout>